# rust-experiments

./: .gitignore  Cargo.toml  README.md  async-for-loop.rs  async-stream-eager.hir  async-stream-eager.rs  async-stream-min-expanded.rs  async-stream-min.rs  async-stream.rs  await  await.rs  ban-trait.rs  ban-trait2.rs  box.rs  deadlock.rs  dhat-heap.json  drop-after-abort.rs  file.rs  futures-unordered.rs  hashmap.rs  in-memory-sqlite.rs  join-all.rs  json.rs  mut-and-arc-ref.rs  mut-and-immut.rs  mutex.rs  poisoned_mutex.rs  rc.rs  refcell.rs  rust-drop-guard-spawn-thread.rs  slice.rs  smallvec-size.rs  subprocess.rs  tcp.rs  thread-local.rs  tokio-rwlock-race.rs  toy.rs  try-with-return.rs  try.rs  vec-eq.rs  (+1 more)
benches/: fibonacci.rs  match-dyn.rs  smallvec-vs-vec.rs  vec-eq-simd.rs  zip-overhead.rs
