[package]
name = "rust-experiments"
version = "0.1.0"
authors = ["Noel Kwan <noelkwan1998@gmail.com"]
edition = "2018"

############## Experiment on futures

[[bin]]
 name = "await"
 path = "await.rs"

# FIXME
# [[bin]]
#  name = "async-for-loop"
#  path = "async-for-loop.rs"

# FIXME
# [[bin]]
#  name = "futures-unordered"
#  path = "futures-unordered.rs"

[[bin]]
 name = "join-all"
 path = "join-all.rs"

############## Experiment on Ownership + Lifetimes

[[bin]]
name = "rc"
path = "rc.rs"

[[bin]]
name = "box"
path = "box.rs"

[[bin]]
name = "refcell"
path = "refcell.rs"

[[bin]]
name = "deadlock"
path = "deadlock.rs"

[[bin]]
name = "tokio-rwlock-race"
path = "tokio-rwlock-race.rs"

[[bin]]
name = "json"
path = "json.rs"

[[bin]]
name = "smallvec-size"
path = "smallvec-size.rs"

[dependencies]
futures = "0.3.18"
tokio = {version = "1.14.0", features = ["full"]}
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
smallvec = { version = "1.10.0", features = ["union", "specialization", "write"] }
paste = "1.0.12"

[dev-dependencies]
criterion = { version = "0.4.0" }

[[bench]]
name = "zip-overhead"
harness = false

[[bench]]
name = "fibonacci"
harness = false

[[bench]]
name = "smallvec-vs-vec"
harness = false
